# hevi

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  STATUS.md  alembic.ini  debug_traceback.py  docker-compose-monitoring.yml  docker-compose.yml  prometheus.yml  pull_duix.sh  pyproject.toml  repro_wan.py  test_f4a_vibevoice.py  test_f5_duix.py  test_gpu_serial.py  test_pipeline.py  test_pipeline2.py  test_pipeline3.py
.github/workflows/: ci.yml
deploy/: Dockerfile.api  Dockerfile.web  cloudflared-config.example.yml  docker-compose-cftunnel.yml
docs/: E2E_SETUP.md  HEVI-ARCHITECTURE.md
docs/ledgers/: aqin-cost-ledger.jsonl
docs/signoffs/: G0-aqin-smoke-20260723.md  G1a-aqin-L2-finding-20260723.md
docs/specs/: 3O-new-elements-manifest.md  HEVI-EXPLAINER-PIPELINE-SPEC-001.md  INC-001-cinematic-increment.md  QNLR-AQIN-ADAPTER-001.md  QNLR-AQIN-AMORT-001.md  QNLR-AQIN-PROJ-001.md  QNLR-EP0-ANGLE-001.md  QNLR-EP0-CONF-001.md  QNLR-EP0-SPEC-001.md  QNLR-S1-MAP-001.md  RFC-001-longvideo-quality.md  RFC-003-omodul-patch.diff  RFC-003-omodul-shot-concurrency.md  RFC-003-upstream-notice.md  RFC-C3-upstream-notice.md  RFC-C5-upstream-notice.md  SPEC-001-shortdrama-eval.md  SPEC-002-mainline-capability-consolidation.md  SPEC-003-mainline-director-pipeline.md  SPEC-004-scene-staging.md  SPEC-005-tongjian-pipeline-refactor.md  SPEC-007-cinematic-pipeline.md  SPEC-008-scene-multiview-consistency.md  SPEC-oprim-new-primitives.md  provider-capability-matrix.md
hevi-remotion/: package-lock.json  package.json
hevi-remotion/src/: ExplainerVideo.tsx  Root.tsx  Zhibo.tsx  theme.ts  types.ts
hevi-web/: .dockerignore  next.config.ts  package-lock.json  package.json
hevi/api/: main.py  mcp_mount.py  rate_limit.py
hevi/assembly/: __init__.py  aspect_ratio.py  assembler.py  beat_align.py  color_match.py  cover_extractor.py  dialogue_track.py  exporter.py  native_dialogue.py  postprocess_service.py  subtitle_align.py  subtitle_burner.py  transition.py
hevi/assets/: __init__.py  loader.py  repository.py
hevi/audio/: __init__.py  audio_config.py  avatar_service.py  bgm_library.py  cosyvoice_service.py  edge_tts_custom.py  qwen_tts_maas.py  tts_service.py  vibevoice_patch.py  vibevoice_worker.py  voice_embed.py
hevi/audio_library/: audio_lib_models.py  audio_lib_repository.py  audio_lib_service.py
hevi/auth/: auth_service.py  dependencies.py  jwt_handler.py  models.py  password.py  repository.py
hevi/canvas/: __init__.py  executor_service.py  graph_models.py  graph_repository.py  graph_service.py  node_mapper.py  preflight.py  validation.py
hevi/cinematic/: __init__.py  platform_binding.py  scene_adapt.py  schemas.py  shot_planning.py  video_gen.py
hevi/core/: config.py  logging.py
hevi/cost/: __init__.py  circuit_breaker.py  empirical_quality.py  estimator.py  pricing_table.py  router.py  selector.py  shot_router.py  tracker.py
hevi/creative/: __init__.py  assist_registry.py  assist_service.py  reference_link.py  workflow_service.py
hevi/credits/: account_service.py  billing_service.py  models.py  repository.py
hevi/db/: database.py  pg_pool.py
hevi/deploy/: docker-compose-dev.yml  docker-compose-prod.yml
hevi/director/: __init__.py  agent.py  concept.py  creative_orchestration.py  cut_style.py  design_list.py  director.py  editor.py  final_review.py  generation_packet.py  graph_render.py  intent.py  multirole_reference.py  performance_derive.py  performance_gen.py  performance_track.py  pipeline_schemas.py  planner.py  produce_v2.py  producer.py  scene_script.py  scene_stage.py  scene_stage_extract.py  scene_stage_lint.py  screenplay.py  segment_qc.py  shot_list.py  shot_preparation.py  storyboard.py  tongjian_render.py  verdict_checks.py  world_bible.py
hevi/dub/: __init__.py  _mux.py  _synth.py  translate.py
hevi/explainer/: __init__.py  render.py  schemas.py  storyboard.py  voiceover.py
hevi/gallery/: __init__.py  repository.py  service.py
hevi/gpu/: __init__.py  providers.py
hevi/image/: __init__.py  _sdxl_batch_worker.py  _sdxl_worker.py  fal_image_service.py  json2video_scene_service.py  qwen_image_service.py  resilient_image_gen.py  scene3d_local.py  sdxl_local_service.py
hevi/mcp/: __init__.py  schemas.py  server.py
hevi/monitoring/: __init__.py  metrics.py  middleware.py  router.py
hevi/observability/: __init__.py  instrumentation.py  structured_log.py  trace.py
hevi/payment/: models.py  order_service.py  paddle_service.py  (+3 more)
output/: e2e_test_ref.txt
scripts/: b5_orientation_e2e.py  build_identity_packs_exec01.py  build_scene_zhibo_full.py  build_scene_zhibo_suodi.py  build_scene_zhibo_suodi_local.py  g1_shortdrama_run.py  gen_placeholder_bgm.py  gen_placeholder_sfx.py  gs1_scene_stage_run.py  inc003_p0_debug_repro.py  inc003_p0_verify_server.py  inc003_prod_accept_e2e.py  incr003_multichar_composite_verify.py  incr003_scene_and_facing.py  incr003_scene_fix.py  libtv_relay.py  oprim_m3_fix.diff  oprim_m4_avatar.diff  oprim_m4_duix.diff  patch_oprim_m3m4.py  patch_vibevoice.py  patch_vibevoice_transformers5.py  scene_stage_gap3_contrast.py
tests/: conftest.py  test_alibaba_maas_service.py  test_assembler.py  test_assembly.py  test_assets.py  test_audio.py  test_auth.py  test_balance_prober.py  test_beat_align.py  test_canvas.py  test_canvas_preflight.py  test_capture_source.py  test_cinematic_platform_binding.py  test_cinematic_scene_adapt.py  test_cinematic_shot_planning.py  test_cinematic_video_gen.py  test_color_match.py  test_continuity_report.py  test_cost.py  test_creative.py  test_creative_orchestration.py  test_credits.py  test_cut_style.py  test_dialogue_track.py  test_director.py  test_director_pipeline_generation.py  test_director_pipeline_orchestrator_integration.py  test_director_pipeline_router.py  test_director_pipeline_schemas.py  test_director_tongjian_render.py  test_director_verdict.py  test_dub.py  test_edge_tts_custom.py  test_emotion_inference.py  test_empirical_quality.py  test_explainer_contract.py  test_exporter.py  test_final_review.py  test_force_colors.py  test_gallery.py  (+80 more)
(+251 files in other folders)
