[project]
name = "hevi"
version = "6.0.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "argon2-cffi>=23.1",
    "pyjwt[crypto]>=2.10",
    # 主库 B路径 git+ssh (L-024) — B0'' pin 升级三批: obase v0.15.9 / oprim v3.10.15 / oskill v3.25.5
    "obase[cache,docker] @ git+ssh://git@github.com/helios-plat/obase.git@v0.15.9",
    "oprim @ git+ssh://git@github.com/helios-plat/oprim.git@v3.10.15",
    "oskill @ git+ssh://git@github.com/helios-plat/oskill.git@v3.25.5",
    "omodul @ git+ssh://git@github.com/helios-plat/omodul.git@v1.28.0",
    "python-frontmatter>=1.3.0",  # oprim v3.10 transitive dep (not declared in oprim)
    "vibevoice==0.0.1",  # oprim._vibevoice_synthesize runtime dep (not declared in oprim metadata)
    "prometheus-client>=0.25.0",
    "psycopg2-binary>=2.9.12",
    "minio>=7.2.20",
    "torch>=2.12.0",
    "transformers==4.51.3",
    "diffusers>=0.30",
    "accelerate>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.14"
exclude = ["hevi/db/alembic/"]

[[tool.mypy.overrides]]
module = ["vibevoice", "vibevoice.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
